--- a/index.html
+++ b/index.html
@@ -5,89 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>New Tab</title>
-    
-    <style>
-      html {
-        align-items: center;
-        color: #313131;
-        display: flex;
-        font: 22px "Courier New", Courier, monospace;
-        height: 100%;
-        justify-content: center;
-        margin: 0;
-      }
-
-      body {
-        display: flex;
-        margin: 1em;
-        padding: 1em;
-      }
-
-      h1 {
-        font-size: 2em;
-        grid-column: 1 / -1;
-        margin: 0;
-        text-align: center;
-      }
-      
-      form {
-        font-size: 2em;
-        grid-column: 1 / -1;
-        margin: 0;
-        text-align: center;
-      }
-
-      form input[type="search"] {
-        background-color: rgba(255, 255, 255, 0.95);
-        border: none;
-        box-sizing: border-box;
-        font-weight: bold;
-        font: inherit;
-        width: 100%;
-      }
-
-      form label {
-        color: #1d81b2;
-        left: -1em;
-        position: absolute;
-      }
-
-      form:focus-within input::placeholder {
-        opacity: 0;
-      }
-
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
-
-      a:focus,
-      a:hover {
-        color: #1d81b2;
-      }
-
-      nav {
-        display: grid;
-        grid-gap: 1em 1em;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        margin: 0 1em;
-        min-width: 24em;
-        padding: 1em 0;
-      }
-
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        white-space: nowrap;
-      }
-
-      li:first-child {
-        font-weight: bold;
-        line-height: 2em;
-      }
-
-    </style>
+    <link href="styles/styles.css" rel="styleheet">
   </head>
 
   <body>
