--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>New Tab</title>
-    <link href="styles/styles.css" rel="styleheet">
+    <link href="styles/style.css" rel="styleheet">
   </head>
-
   <body>
     <nav>
       <h1>Welcome To Your Startpage Robert</h1>
@@ -29,8 +28,6 @@
         <li><a href="https://twitter.com">Twitter</a></li>
         <li><a href="https://facebook.com">Facebook</a></li>
       </ul>
-
-
       
       <ul>
         <li>Ricing</li>
@@ -64,7 +61,5 @@
                placeholder="search with duckduckgo...">
       </form>
     </nav>
-
-
   </body>
 </html>
