--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li><a href="https://stpg.tk">/wg/-/stpg</a></li>
         <li><a href="https://github.com">Github</a></li>
         <li><a href="https://codepen.io/">codepen</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web">MDN Web Docs</a></li>
       </ul>
       <form action="https://duckduckgo.com/" method="GET">
         <label for="q">></label>
