--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <li>Media</li>
         <li><a href="https://youtube.com">YouTube</a></li>
         <li><a href="https://crunchyroll.com">Crunchyroll</a></li>
+        <li><a href="https://twitch.tv">Twitch</a></li>
         <li><a href="https://vlive.tv">V LIVE</a></li>
-        <li><a href="https://viki.com">Viki</a></li>
-        <li><a href="https://netflix.com">Netflix</a></li>
         <li><a href="https://hulu.com">Hulu</a></li>
       </ul>
       
