--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <nav>
+      <div class="cleanslate w24tz-current-time w24tz-middle" style="display: inline-block !important; visibility: hidden !important; min-width:300px !important; min-height:145px !important;"><p><a href="//24timezones.com/usa_time/tx_brazos/college_station.php" style="text-decoration: none" class="clock24" id="tz24-1609629427-cu105361-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMSIsInNob3dzZWNvbmRzIjoiMCIsImNvbnRhaW5lcl9pZCI6ImNsb2NrX2Jsb2NrX2NiNWZmMGZlZjNkN2NlYyIsInR5cGUiOiJkYiIsImxhbmciOiJlbiJ9" title="time in College Station" target="_blank" rel="nofollow">Time in College Station</a></p><div id="clock_block_cb5ff0fef3d7cec"></div></div>
+      <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+      
       <h1>Welcome To Your Startpage Robert</h1>
       
       <ul>
