--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <h1>Welcome To Your <span style="color: teal;">Startpage</span> <span style="color: red;">Robert</span> </h1>
+      <h1>Welcome To Your <span style="color: teal;">Startpage</span> <span class="cobalt_text">Robert</span> </h1>
       
       <ul>
         <li>Media</li>
