--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <h1>Welcome To Your <span class="teal_text">Startpage</span> <span class="cream_text">Robert</span> </h1>
+      <h1>Welcome To Your <span class="teal_text">Startpage</span> <span class="rust_text">Robert</span> </h1>
       
       <ul>
         <li>Media</li>
