--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="https://codepen.io/">codepen</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web">MDN Web Docs</a></li>
       </ul>
-      <form action="https://duckduckgo.com/" method="GET">
+      ><form action="https://duckduckgo.com/" method="GET">
         <label for="q">></label>
         <input autofocus
                id="q" 
