--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
     <img src="images/rimuru.jpg" width="300" height="400">
     <h1>Welcome To Your <span class="teal_text">Startpage</span> <span class="rust_text">Robert</span> </h1>
     
@@ -65,6 +66,7 @@
               type="search" 
               placeholder="search with duckduckgo...">
     </form>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/MyClockDisplay.js"></script>
+    <script src="scripts/imageSwitcher.js"></script>
   </body>
 </html>
