--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </ul>
       <form action="https://duckduckgo.com/" method="GET">
         <label for="q">></label>
-        ><input autofocus
+        <input autofocus
                id="q" 
                name="q" 
                type="search" 
