--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
     <div class="top">
       <img src="images/rimuru.jpg">
     </div>
 
+    <p></p>
     <h1>Welcome To Your <span class="teal_text">Startpage</span> <span class="rust_text">Robert</span> </h1>
     
     <form action="https://duckduckgo.com/" method="GET">
       <input autofocus id="q" name="q" type="search" placeholder="Search">
     </form>
-    
+
     <nav>
       <ul>
         <li>Media</li>
@@ -72,5 +72,7 @@
         <li><a href="https://robertquijano.com"><img src="https://robertquijano.com/favicon.ico">Personal Site</a></li>
       </ul>
     </nav>
+
+    <script src="scripts/imageSwitcher.js"></script>    
   </body>
 </html>
