--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       <ul>
         <li>Social</li>
         <li><a href="https://reddit.com"><img src="https://www.redditstatic.com/icon.png">Reddit</a></li>
-        <li><a href="https://discord.com/app"><img src="https://discord.com/assets/07dca80a102d4149e9736d4b162cff6f.ico">Discord</a></li>
         <li><a href="https://twitter.com"><img src="https://img.icons8.com/fluent/48/000000/twitter.png">Twitter</a></li>
         <li><a href="https://facebook.com"><img src="https://static.xx.fbcdn.net/rsrc.php/yD/r/d4ZIVX-5C-b.ico">Facebook</a></li>
         <li><a href="https://tumblr.com"><img src="https://tumblr.com/favicon.ico">Tumblr</a></li>
@@ -61,6 +60,8 @@
         <li><a href="https://amazon.com"><img src="https://amazon.com/favicon.ico">Amazon</a></li>
         <li><a href="https://ebay.com"><img src="https://pages.ebay.com/favicon.ico">eBay</a></li>
         <li><a href="https://musicplaza.com"><img src="https://cdn.shopify.com/s/files/1/0001/9650/9713/t/10/assets/favicon.png?v=958240746167573437">Music Plaza</a></li>
+        <li><a href="https://otakumode.com"><img src="https://otakumode.com/favicon.ico">Tokyo Otaku Mode</a></li>
+        <li><a href="https://bestbuy.com"><img src="https://bestbuy.com/favicon.ico">Best Buy</a></li>
       </ul>
 
       <ul>
