--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <ul>
         <li>Social</li>
         <li><a href="https://reddit.com"><img src="https://www.redditstatic.com/icon.png">Reddit</a></li>
+        <li><a href="https://instagram.com"><img src="https://instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png">Instagram</a></li>
         <li><a href="https://twitter.com"><img src="https://img.icons8.com/fluent/48/000000/twitter.png">Twitter</a></li>
         <li><a href="https://facebook.com"><img src="https://static.xx.fbcdn.net/rsrc.php/yD/r/d4ZIVX-5C-b.ico">Facebook</a></li>
         <li><a href="https://tumblr.com"><img src="https://tumblr.com/favicon.ico">Tumblr</a></li>
