--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="https://twitch.tv"><img src="https://twitch.tv/favicon.ico">Twitch</a></li>
         <li><a href="https://vlive.tv"><img src="https://vlive.tv/favicon.ico">V LIVE</a></li>
         <li><a href="https://hulu.com"><img src="https://hulu.com/favicon.ico">Hulu</a></li>
+        <li><a href="https://netflix.com"><img src="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">Netflix</a></li>
       </ul>
       
       <ul>
