--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="images/rimuru.jpg">
     </div>
     
-    <h1>Welcome To Your <span class="teal_text">Startpage</span> <span class="purple_text">Dorrel</span> </h1>
+    <h1>Welcome To Your <span class="cyan_text">Startpage</span> <span class="purple_text">Dorrel</span> </h1>
     
     <form action="https://duckduckgo.com/" method="GET">
       <input autofocus id="q" name="q" type="search" placeholder="Search">
