--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="https://vlive.tv"><img src="https://vlive.tv/favicon.ico">V LIVE</a></li>
         <li><a href="https://hulu.com"><img src="https://hulu.com/favicon.ico">Hulu</a></li>
         <li><a href="https://netflix.com"><img src="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">Netflix</a></li>
+        <li><a href="https://j-novel.club"><img src="https://j-novel.club/favicon.ico">J-Novel Club</a></li>
       </ul>
       
       <ul>
@@ -36,7 +37,6 @@
         <li><a href="https://reddit.com"><img src="https://www.redditstatic.com/icon.png">Reddit</a></li>
         <li><a href="https://instagram.com"><img src="https://instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png">Instagram</a></li>
         <li><a href="https://twitter.com"><img src="https://img.icons8.com/fluent/48/000000/twitter.png">Twitter</a></li>
-        <li><a href="https://facebook.com"><img src="https://static.xx.fbcdn.net/rsrc.php/yD/r/d4ZIVX-5C-b.ico">Facebook</a></li>
       </ul>
       
       <ul>
