--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <h1>Welcome To Your <span class="teal_text">Startpage</span> <span class="purple_text">Dorrel</span> </h1>
     
-    <form action="https://search.privacyguides.net/" method="GET">
+    <form action="https://search.brave.com/" method="GET">
       <input autofocus id="q" name="q" type="search" placeholder="Search">
     </form>
 
