--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
       <ul>
         <li>Social</li>
-	<li><a href="https://anilist.co/"><img src="view-source:https://anilist.co/img/icons/favicon-32x32.png">AniList</a></li>
+	<li><a href="https://anilist.co/"><img src="https://anilist.co/img/icons/favicon-32x32.png">AniList</a></li>
         <li><a href="https://myanimelist.net/"><img src="https://cdn.myanimelist.net/images/favicon.ico">MAL</a></li>
         <li><a href="https://reddit.com"><img src="https://www.redditstatic.com/icon.png">Reddit</a></li>
         <li><a href="https://instagram.com"><img src="https://instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png">Instagram</a></li>
